--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,9 @@ dependencies:
   go_router: ^3.0.1
   google_fonts: ^2.2.0
   hooks_riverpod: ^1.0.3
-  mocktail: ^0.3.0
+  # mocktail: ^0.3.0
   pedantic_mono: ^1.15.0
+  provider: ^6.0.2
 
 dev_dependencies:
   build_runner: ^2.1.7
