--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,13 @@ dependencies:
     sdk: flutter
   flutter_hooks: ^0.18.2
   flutter_screenutil: ^5.0.1+2
+  flutter_slider_drawer: ^2.0.0
   flutter_staggered_animations: ^1.0.0
   freezed_annotation: ^1.1.0
   go_router: ^3.0.1
   google_fonts: ^2.2.0
   hooks_riverpod: ^1.0.3
-  mocktail: ^0.3.0
+  # mocktail: ^0.3.0
   pedantic_mono: ^1.15.0
 
 dev_dependencies:
