--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,9 @@ dependencies:
   hooks_riverpod: ^1.0.3
   # mocktail: ^0.3.0
   pedantic_mono: ^1.15.0
+  path: ^1.8.0
   provider: ^6.0.2
+  sqflite: ^2.0.2
 
 dev_dependencies:
   build_runner: ^2.1.7
