--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_staggered_animations: ^1.0.0
   freezed_annotation: ^1.1.0
   go_router: ^3.0.1
-  google_fonts: ^2.2.0
+  google_fonts: 2.2.0
   hooks_riverpod: ^1.0.3
   # mocktail: ^0.3.0
   pedantic_mono: ^1.15.0
