--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   path: ^1.8.0
   provider: ^6.0.2
   sqflite: ^2.0.2
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   build_runner: ^2.1.7
@@ -39,3 +40,6 @@ flutter:
   assets:
     - assets/false.jpeg
     - assets/true.jpeg
+    - assets/correct.mp3
+    - assets/incorrect.mp3
+    - assets/switch.mp3
