--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,22 +20,31 @@ dependencies:
   go_router: ^3.0.1
   google_fonts: ^2.2.0
   hooks_riverpod: ^1.0.3
+  intl: ^0.17.0
+  json_annotation: ^4.4.0
   # mocktail: ^0.3.0
-  pedantic_mono: ^1.15.0
   path: ^1.8.0
+  pedantic_mono: ^1.15.0
   provider: ^6.0.2
   sqflite: ^2.0.2
-  intl: ^0.17.0
-
+  sqlite_viewer: ^1.0.5
+  
 dev_dependencies:
   build_runner: ^2.1.7
+  flutter_gen_runner: ^4.1.5
   flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
   freezed: ^1.1.1
+  json_serializable: ^6.1.4
 
 flutter:
   uses-material-design: true
   assets:
-    - assets/false.jpeg
-    - assets/true.jpeg
+    - assets/images/image_false.jpeg
+    - assets/images/image_true.jpeg
+    - assets/json/settings.json
+
+flutter_gen:
+  output: lib/gen/
+  lineLength: 80 
