--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -22,6 +22,9 @@ jobs:
           flutter-version: '2.10.3'
           channel: 'stable'
           cache: true
+        uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
 
       - name: 'Cache pubspec dependencies'
         uses: actions/cache@v2
@@ -35,27 +38,8 @@ jobs:
           key: build-pubspec-${{ hashFiles('**/pubspec.lock') }}
           restore-keys: |
             build-pubspec-
-#       - uses: actions/checkout@v3
-
-#       # Note: This workflow uses the latest stable version of the Dart SDK.
-#       # You can specify other versions if desired, see documentation here:
-#       # https://github.com/dart-lang/setup-dart/blob/main/README.md
-#       # - uses: dart-lang/setup-dart@v1
-#       - uses: dart-lang/setup-dart@9a04e6d73cca37bd455e0608d7e5092f881fd603
-
-#       - name: Install dependencies
-#         run: dart pub get
-
-#       # Uncomment this step to verify the use of 'dart format' on each commit.
-#       # - name: Verify formatting
-#       #   run: dart format --output=none --set-exit-if-changed .
-
-#       # Consider passing '--fatal-infos' for slightly stricter analysis.
-#       - name: Analyze project source
-#         run: dart analyze
-
-#       # Your project will need to have tests in test/ and a dependency on
-#       # package:test for this step to succeed. Note that Flutter projects will
-#       # want to change this to 'flutter test'.
-#       - name: Run tests
-#         run: dart test
+      - name: 'Run lint'
+        run: flutter analyze
+      # - run: flutter pub get
+      - name: 'Run test'
+        run: flutter test
