--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -16,15 +16,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: 'Setup java environment'
+        uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+
       - name: 'Setup flutter environment'
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '2.10.3'
           channel: 'stable'
           cache: true
-        uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
 
       - name: 'Cache pubspec dependencies'
         uses: actions/cache@v2
