--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.2
-  flutter_screenutil: ^5.0.1+2
+  flutter_screenutil: 5.0.1+2
   flutter_slider_drawer: ^2.0.0
   flutter_staggered_animations: ^1.0.0
   freezed_annotation: ^1.1.0
