--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,18 @@ environment:
   sdk: ">=2.15.1 <3.0.0"
 
 dependencies:
-  audioplayers: ^0.20.1
+  audioplayers: ^0.20.0
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.2
-  flutter_screenutil: ^5.0.1+2
+  flutter_screenutil: ^5.5.4
   flutter_slider_drawer: ^2.0.0
   flutter_staggered_animations: ^1.0.0
-  freezed_annotation: ^1.1.0
-  go_router: ^3.0.1
+  freezed_annotation: ^2.1.0
+  go_router: ^4.5.1
   google_fonts: 2.2.0
-  hooks_riverpod: ^1.0.3
+  hooks_riverpod: ^2.0.2
   intl: ^0.17.0
   json_annotation: ^4.4.0
   # mocktail: ^0.3.0
@@ -32,11 +32,11 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.1.7
-  flutter_gen_runner: ^4.1.5
-  flutter_lints: ^1.0.4
+  flutter_gen_runner: ^5.0.1
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  freezed: ^1.1.1
+  freezed: ^2.1.1
   json_serializable: ^6.1.4
 
 flutter:
@@ -45,9 +45,9 @@ flutter:
     - assets/images/image_false.jpeg
     - assets/images/image_true.jpeg
     - assets/json/settings.json
-    - assets/correct.mp3
-    - assets/incorrect.mp3
-    - assets/switch.mp3
+    - assets/sound/incorrect.mp3
+    - assets/sound/correct.mp3
+    - assets/sound/switch.mp3
 
 flutter_gen:
   output: lib/gen/
