#40: Add dart code metrics to CI Flow

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -48,3 +48,5 @@ jobs:
       - name: 'Run test'
         run: flutter test
 
+      — name: Run Code Metrics
+        run: flutter pub run dart_code_metrics:metrics --reporter=github lib
