--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.1.7
+  dart_code_metrics: ^5.0.1
   flutter_gen_runner: ^5.0.1
   flutter_lints: ^2.0.1
   flutter_test:
