--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -49,4 +49,4 @@ jobs:
         run: flutter test
 
       — name: 'Run Code Metrics'
-        run: flutter pub run dart_code_metrics:metrics --reporter=github lib
+        run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=github
