--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -48,5 +48,5 @@ jobs:
       - name: 'Run test'
         run: flutter test
 
-      — name: 'Run Code Metrics'
-        run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=github
+      # — name: 'Run Code Metrics'
+      #   run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=github
