#40: debug用コードの追加

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -49,7 +49,7 @@ jobs:
         run: flutter test
 
       - name: 'Run Code Metrics'
-        run: flutter pub run dart_code_metrics:metrics
+        run: flutter pub run dart_code_metrics:metrics analyze lib
 
       # — name: 'Run Code Metrics'
       #   run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=github
