#40: add dart metrics rule

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -26,3 +26,5 @@ dart_code_metrics:
     - prefer-trailing-comma
     - prefer-conditional-expressions
     - no-equal-then-else
+  extends:
+    - package:dart_code_metrics/presets/all.yaml
