#40: ワークフローの実行条件に手動トリガを追加

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -6,8 +6,9 @@
 name: Flutter CI
 
 on:
-  pull_request:
-    branches: [ develop ]
+  # pull_request:
+  #   branches: [ develop ]
+  workflow_dispatch:
 
 jobs:
   build:
