--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -65,7 +65,10 @@ jobs:
           files: ./coverage/lcov.info
 
       - name: Run satic analysis
-        run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=github
+        # run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=github
+        uses: dart-code-checker/dart-code-metrics-action@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Remove problem matcher
         if: always()
