--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,6 +2,8 @@
 include: package:pedantic_mono/analysis_options.yaml
 
 analyzer:
+  plugins:
+    - dart_code_metrics
   exclude:
     - "**/*.g.dart"
     - "**/*.freezed.dart"
