--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -41,8 +41,8 @@ jobs:
       - name: Get flutter packages
         run: flutter pub get
 
-      - name: Add problem matcher
-        run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
+      # - name: Add problem matcher
+      #   run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
 
       - name: Check lint
         run: flutter analyze | tee ./flutter_analyze_report.txt
@@ -64,9 +64,27 @@ jobs:
         with:  
           files: ./coverage/lcov.info
 
-      - name: Run satic analysis
-        run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=console
+      # - name: Run satic analysis
+      #   run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=console
 
-      - name: Remove problem matcher
+      # - name: Remove problem matcher
+      #   if: always()
+      #   run: echo "::remove-matcher owner=dart-analyzer::"
+
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
         if: always()
-        run: echo "::remove-matcher owner=dart-analyzer::"
+        with:
+          ruby-version: '2.7'
+          bundler-cache: true
+
+      - name: Danger
+        uses: MeilCli/danger-action@1996610a4c089e3a79bf3131a70c3c1b311e32f9
+        if: always()
+        with:
+          plugins_file: 'Gemfile'
+          install_path: 'vendor/bundle'
+          danger_file: 'Dangerfile'
+          danger_id: 'danger-pr'
+        env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
