--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -72,14 +72,14 @@ jobs:
       #   run: echo "::remove-matcher owner=dart-analyzer::"
 
       - name: Setup Ruby
-        uses: ruby/setup-ruby@v2
+        uses: ruby/setup-ruby@v1
         if: always()
         with:
           ruby-version: '2.7'
           bundler-cache: true
 
       - name: Danger
-        uses: MeilCli/danger-action@1996610a4c089e3a79bf3131a70c3c1b311e32f9
+        uses: MeilCli/danger-action@v5
         if: always()
         with:
           plugins_file: 'Gemfile'
