--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -74,14 +74,16 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         if: always()
+        with:
+          ruby-version: '2.6'
 
       - name: Danger
         uses: MeilCli/danger-action@v5
         if: always()
         with:
-          plugins_file: 'Gemfile'
+          plugins_file: '.github/Gemfile'
           install_path: 'vendor/bundle'
-          danger_file: 'Dangerfile'
+          danger_file: '.github/Dangerfile'
           danger_id: 'danger-pr'
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
