--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -75,7 +75,11 @@ jobs:
         uses: ruby/setup-ruby@v1
         if: always()
         with:
-          ruby-version: '2.6.6'
+          ruby-version: '2.7'
+
+      # Install the right bundler version
+      - name: Install bundler
+        run: gem install bundler
 
       - name: Danger
         uses: MeilCli/danger-action@v5
