--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -43,8 +43,8 @@ jobs:
       - name: Get flutter packages
         run: flutter pub get
 
-      # - name: Add problem matcher
-      #   run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
+      - name: Add problem matcher
+        run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
 
       - name: Check lint
         run: flutter analyze | tee ./flutter_analyze_report.txt
@@ -69,9 +69,9 @@ jobs:
       # - name: Run satic analysis
       #   run: flutter pub run dart_code_metrics:metrics analyze lib --reporter=console
 
-      # - name: Remove problem matcher
-      #   if: always()
-      #   run: echo "::remove-matcher owner=dart-analyzer::"
+      - name: Remove problem matcher
+        if: always()
+        run: echo "::remove-matcher owner=dart-analyzer::"
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
@@ -79,11 +79,10 @@ jobs:
         with:
           ruby-version: '2.7'
 
-      # Install the right bundler version
       - name: Install bundler
         run: gem install bundler
 
-      - name: Danger
+      - name: Create pull-req omment 
         uses: MeilCli/danger-action@v5
         if: always()
         with:
