--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -73,22 +73,22 @@ jobs:
         if: always()
         run: echo "::remove-matcher owner=dart-analyzer::"
 
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        if: always()
-        with:
-          ruby-version: '2.7'
+      # - name: Setup Ruby
+      #   uses: ruby/setup-ruby@v1
+      #   if: always()
+      #   with:
+      #     ruby-version: '2.7'
 
-      - name: Install bundler
-        run: gem install bundler
+      # - name: Install bundler
+      #   run: gem install bundler
 
-      - name: Create pull-req omment 
-        uses: MeilCli/danger-action@v5
-        if: always()
-        with:
-          plugins_file: '.github/Gemfile'
-          install_path: 'vendor/bundle'
-          danger_file: '.github/Dangerfile'
-          danger_id: 'danger-pr'
-        env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Create pull-req omment 
+      #   uses: MeilCli/danger-action@v5
+      #   if: always()
+      #   with:
+      #     plugins_file: '.github/Gemfile'
+      #     install_path: 'vendor/bundle'
+      #     danger_file: '.github/Dangerfile'
+      #     danger_id: 'danger-pr'
+      #   env:
+      #     DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
