--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -84,10 +84,10 @@ jobs:
         if: always()
         run: |
           CHANGED_FILES="${{ steps.extract_changed_files.outputs.changed_files }}"
-          CHANGED_FILES="${CHANGED_FILES//'%0A'/'\n'}"
-          CHANGED_FILES="${CHANGED_FILES//'%0D'/'\r'}"
+          CHANGED_FILES="${CHANGED_FILES//'%0A'/$'\n'}"
+          CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
           CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
-          echo $CHANGED_FILES
+          echo "$CHANGED_FILES"
           : # for FILE in CHANGED_FILES; do
             : # echo "$FILE"
             : # grep -1 -E "$FILE" dart_code_metrics-analyze.log  
