--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -88,10 +88,10 @@ jobs:
           CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
           CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
           echo "$CHANGED_FILES"
-          : # for FILE in CHANGED_FILES; do
-            : # echo "$FILE"
-            : # grep -1 -E "$FILE" dart_code_metrics-analyze.log  
-          : # done
+          for FILE in $CHANGED_FILES; do
+            echo "$FILE"
+            grep -1 -E "$FILE" dart_code_metrics-analyze.log  
+          done
 
       - name: Remove problem matcher
         if: always()
