--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -87,10 +87,12 @@ jobs:
           CHANGED_FILES="${CHANGED_FILES//'%0A'/$'\n'}"
           CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
           CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
+          CHANGED_FILES="${CHANGED_FILES//'.'/"\."}"
+          CHANGED_FILES="${CHANGED_FILES//'/'/"\/"}"
           echo "$CHANGED_FILES"
           for FILE in $CHANGED_FILES; do
             echo "$FILE"
-            grep -1 -E "$FILE" dart_code_metrics-analyze.log || [[ $? == 1 ]]
+            grep -1 -E ".*$FILE.*" dart_code_metrics-analyze.log || [[ $? == 1 ]]
           done
 
       - name: Remove problem matcher
