--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -70,6 +70,7 @@ jobs:
         id: extract_changed_files
         run: |
           git fetch
+          git branch -a
           CHANGED_FILES=$(git diff --diff-filter=d --name-only origin/${{ github.base_ref }}...origin/${{ github.head_ref }})
           CHANGED_FILES="${CHANGED_FILES//'%'/'%25'}"
           CHANGED_FILES="${CHANGED_FILES//$'\n'/'%0A'}"
