--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -72,12 +72,12 @@ jobs:
           : # git fetch
           git fetch origin ${{ github.base_ref }}:${{ github.base_ref }}
           : # git branch -a
-
-          CHANGED_FILES=$(git diff --diff-filter=d --name-only origin/${{ github.base_ref }}...origin/${{ github.head_ref }})
-          CHANGED_FILES="${CHANGED_FILES//'%'/'%25'}"
-          CHANGED_FILES="${CHANGED_FILES//$'\n'/'%0A'}"
-          CHANGED_FILES="${CHANGED_FILES//$'\r'/'%0D'}"
-          echo "changed_files=$CHANGED_FILES" >> $GITHUB_OUTPUT
+          git diff --diff-filter=d --name-only HEAD ${{ github.base_ref }}
+          : # CHANGED_FILES=$(git diff --diff-filter=d --name-only origin/${{ github.base_ref }}...origin/${{ github.head_ref }})
+          : # CHANGED_FILES="${CHANGED_FILES//'%'/'%25'}"
+          : # CHANGED_FILES="${CHANGED_FILES//$'\n'/'%0A'}"
+          : # CHANGED_FILES="${CHANGED_FILES//$'\r'/'%0D'}"
+          : # echo "changed_files=$CHANGED_FILES" >> $GITHUB_OUTPUT
 
       - name: Check code metrics
         run: |
