--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -22,7 +22,7 @@ jobs:
 
       - name: test
         run: |
-          echo ${{ github.event.commits }}
+          echo ${{ github.event.pull_request }}
 
       # - name: Setup flutter environment
       #   uses: subosito/flutter-action@v2
